tutorial/blue-green/destination-rule-recomm-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: recommendation
    namespace: tutorial
spec:
    host: recommendation
    subsets:
        - name: version-v1
          labels:
            version: v1
        - name: version-v2
          labels:
            version: v2
